# fm-index

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE
doc/: BUILD  fm-index.tex  wavelet.dot
fm-index/: BUILD  bw-transform.cc  bw-transform.h  bw-transform_test.cc  fm-index.cc  fm-index.h  fm-index_slow_test.cc  fm-index_test.cc  fm-index_test.h  fm-index_test_lib.cc  wavelet-tree.cc  wavelet-tree.h  wavelet-tree_test.cc
