module(
    name = "com_github_bcsgh_fm_index",
    version = "0.0.1",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
bazel_dep(
    name = "abseil-cpp",
    version = "20240722.0.bcr.2",
    repo_name = "com_google_absl",
)

bazel_dep(
    name = "com_github_bcsgh_graphviz",
    version = "0.0.1",
)

bazel_dep(
    name = "com_github_bcsgh_latex_rules",
    version = "0.0.1",
)

git_repository(
    name = "com_github_dwyl_english_words",
    commit = "a77cb15f4f5beb59c15b945f2415328a6b33c3b0",  # current as of 2023/11/12
    remote = "https://github.com/dwyl/english-words",
    build_file = "//extern:BUILD.raw_files",
    shallow_since = "1667945476 +0000",
)

bazel_dep(
    name = "googletest",
    version = "1.15.2",
    repo_name = "com_google_googletest",
)
