module(
    name = "com_github_bcsgh_fm_index",
    version = "0.0.1",
)

git_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

bazel_dep(
    name = "abseil-cpp",
    version = "20250127.0",
)
bazel_dep(
    name = "com_github_bcsgh_graphviz",
    version = "0.0.1",
)
bazel_dep(
    name = "com_github_bcsgh_latex_rules",
    version = "0.0.1",
)

git_repository(
    name = "com_github_dwyl_english_words",
    build_file = "//extern:BUILD.raw_files",
    commit = "a77cb15f4f5beb59c15b945f2415328a6b33c3b0",  # current as of 2023/11/12
    remote = "https://github.com/dwyl/english-words",
    shallow_since = "1667945476 +0000",
)

bazel_dep(
    name = "com_github_bcsgh_test_base",
    version = "0.0.1",
    dev_dependency = True,
)
bazel_dep(
    name = "googletest",
    version = "1.16.0",
    dev_dependency = True,
)

bazel_dep(
    name = "rules_cc",
    version = "0.1.1",
)
